@@ -2,7 +2,7 @@
 
 search forward/back checkbox
 history
-recent
+
 window subclass ?
 
 plugins
